Replace ByteBuffer with MemorySegment, upgrade to Java 17, separate DAO impl